# pgSlideShow

./: AGENTS.md  Documentation.html  LICENSE.md  README.md  README.rst  pgSlideShow.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: pgSlideShow.py
src/pgslideshow/: __init__.py  __main__.py  cli.py  slideshow.py
tests/: conftest.py  test_cli.py  test_slideshow.py
