[project]
name = "pgslideshow"
version = "2.0.0"
description = "A pygame-based image slideshow application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brad Montgomery", email = "brad@bradmontgomery.net"}
]
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
pgslideshow = "pgslideshow.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgslideshow"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"
